...
        _uiState.value.copy(
            updatingMember = member, showEditMemberDialog = true, newRole = member.role.type)
  }

  fun onDeleteMember(member: AssociationMember) {
    if (member.user.uid == CurrentUser.userUid) {
      snackbarSystem.showSnackbar("You cannot remove yourself")
      return
    }
    _uiState.value = _uiState.value.copy(updatingMember = member, showDeleteMemberDialog = true)
  }

  fun onEditMemberDialogDismiss() {
...
